style: clean up css and fix body background layout issues

--- a/static/core/css/style.css
+++ b/static/core/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background-image: url('/static/images/tasknest_hero_image.png');
     background-size: cover;
-    background-position: center center
+    background-position: center center;
     background-repeat: no-repeat;
     background-attachment: scroll;
     color: white;
@@ -21,7 +21,7 @@ body::before {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); /* Optional overlay */
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: -1;
 }
 
@@ -161,6 +161,13 @@ padding: 30px;
     color: #2d6a4f !important;
 }
 
+.navbar .btn {
+  margin-left: 10px;
+}
+
+.navbar-text {
+  margin-right: 10px;
+}
 
 .navbar-dark .nav-link:hover {
     color: #f97316;
